# codegraph-rs

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PORTING.md  README.md  TELEMETRY.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  claude-review.yml  continuous-ai-review.yml
.jfc/: highlight-heights.json  tasks.json
.jfc/audit/: runtime.jsonl
.jfc/git/: commit_messages.jsonl
.jfc/reviews/: content-hashes.json  findings.jsonl  review_events.jsonl  runs.jsonl
analysis/: ADAPTER_PARITY.md  Cargo.toml  DESIGN_FUTURE.md  PLAN.md  README.md  VULN_ENGINE_ROADMAP.md
analysis/benches/: graph_bench.rs
analysis/examples/: try_context.rs
analysis/src/: analysis.rs  analysis_tools.rs  bfs_directed.rs  builder.rs  cache.rs  capabilities.rs  cfg.rs  cfg_rules.rs  closure.rs  co_change.rs  communities.rs  complexity.rs  complexity_rules.rs  concurrency.rs  concurrency_rules.rs  content_index.rs  coverage.rs  csr.rs  data_dir.rs  dataflow.rs  dataflow_rules.rs  dominators.rs  enrichment.rs  fingerprint.rs  formatting.rs  framework_routes.rs  gpu_bfs.rs  gpu_cochange.rs  gpu_dominators.rs  gpu_modularity.rs  gpu_pagerank.rs  gpu_scc.rs  graph.rs  hll.rs  incremental.rs  ir.rs  ir_map.rs  kind_specific.rs  label_reachability.rs  lib.rs  (+13 more)
analysis/src/adapter/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
analysis/src/analysis/: algorithms.rs
analysis/src/context/: budget.rs  dataflow_seed.rs  measure.rs  mod.rs  render.rs  resolver.rs  retrieval_gate.rs
analysis/src/context/render/: impact.rs  labels.rs  mod.rs  relationships.rs  sections.rs  tests.rs
analysis/src/dsl/: aggregate.rs  mod.rs  plan.rs  provenance.rs  stream.rs  syntax.rs
analysis/src/dsl/syntax/: ast.rs  error.rs  lexer.rs  mod.rs
analysis/src/dsl/syntax/executor/: aggregate.rs  dominators.rs  entrypoints.rs  expr.rs  mod.rs  multi_path.rs  path_query.rs  path_search.rs  pipe.rs  pipe_basic.rs  pipe_graph.rs  pipe_insights.rs  pipe_metadata.rs  seeded.rs  set.rs  trait_impls.rs
analysis/src/dsl/syntax/parser/: expr.rs  kind.rs  legacy.rs  mod.rs  op.rs  op_advanced.rs  op_arguments.rs  path.rs  selectors.rs
analysis/src/dsl/syntax/tests/: extended.rs  graph_fixture.rs  legacy_query.rs  mod.rs  operators.rs  parser.rs  reachable.rs  unified.rs
analysis/src/ir/: model.rs
analysis/src/session/: mod.rs
analysis/src/traversal/: mod.rs
analysis/src/vuln/: cfg_dominance.rs  classify.rs  fix_history.rs  learned.rs  mining.rs  mod.rs  taint_seed.rs
analysis/tests/: fingerprint_stability.rs  node_id_stability.rs
analysis/tests/fixtures/: sample.rs
notes/: cli.md  close-engine.md  close-tier1-needs.md  codegraph-api.md  context.md  db.md  dedup.md  extraction-core.md  extraction-languages.md  extraction-misc.md  extraction-orchestrator.md  extraction-svelte-vue.md  frameworks-backend.md  frameworks-js.md  frameworks-systems.md  graph.md  installer.md  jfc-graph-migration.md  mcp-daemon.md  mcp-server.md  mcp-tools.md  parity.md  prototype-gap-matrix.md  resolution-callback.md  resolution-import.md  resolution-match.md  resolution-stitch.md  resolution-types.md  rmcp-gaps.md  search.md  sync.md  ui.md
src/: analysis_bridge.rs  analyze.rs  analyze_ir.rs  codegraph.rs  context_analysis.rs  directory.rs  error.rs  history.rs  lib.rs  project_config.rs  prompt_hook.rs  telemetry.rs  types.rs  upgrade.rs  utils.rs
src/analysis_bridge/: cache.rs  mapping.rs  mod.rs  options.rs  result.rs  rows.rs  sidecar.rs  snapshot.rs  stats.rs
src/analyze_ir/: mod.rs
src/context/: builder.rs  formatter.rs  markers.rs  mod.rs
src/context_analysis/: mod.rs
src/db/: connection.rs  migrations.rs  mod.rs  queries.rs  schema.sql
src/extraction/: astro_extractor.rs  cfml_extractor.rs  dfm_extractor.rs  extraction_version.rs  generated_detection.rs  grammars.rs  ida_c_extractor.rs  ida_manifest.rs  liquid_extractor.rs  lwc_template.rs  mod.rs  mybatis_extractor.rs  orchestrator.rs  razor_extractor.rs  salesforce_markup.rs  svelte_extractor.rs  tree_sitter_helpers.rs  tree_sitter_types.rs  tree_sitter_wrapper.rs  unlace_extractor.rs  vue_extractor.rs
src/graph/: cancel.rs  mod.rs  queries.rs  traversal.rs
src/installer/: config_writer.rs  install.rs  instructions_template.rs  mod.rs
src/mcp/: daemon.rs  daemon_paths.rs  daemon_registry.rs  engine.rs  mod.rs  proxy.rs  server.rs  server_instructions.rs  session.rs  tools.rs  transport.rs  version.rs
src/resolution/: callback_synthesizer.rs  go_module.rs  gpu.rs  import_resolver.rs  jvm_scope.rs  lru_cache.rs  mod.rs  name_matcher.rs  path_aliases.rs  resolver.rs  strip_comments.rs  swift_objc_bridge.rs  types.rs  workspace_packages.rs
src/search/: identifier_segments.rs  mod.rs  query_parser.rs  query_utils.rs
src/sync/: git_hooks.rs  mod.rs  watch_policy.rs  watcher.rs  worktree.rs
src/ui/: glyphs.rs  mod.rs  shimmer_progress.rs  types.rs
tests/: analysis_bridge_test.rs  analyze_cache_test.rs  analyze_cli_test.rs  analyze_diff_test.rs  analyze_fields_test.rs  analyze_ir_test.rs  analyze_source_reports_test.rs  callback_synthesizer_test.rs  cli_test.rs  cli_tools_test.rs  codegraph_api_test.rs  context_budget_test.rs  context_test.rs  db_test.rs  extraction_languages_test.rs  extraction_test.rs  foundation_test.rs  frameworks_backend_test.rs  frameworks_js_test.rs  frameworks_systems_test.rs  git_hooks_test.rs  grammars_test.rs  graph_test.rs  import_resolver_test.rs  installer_targets_test.rs  jvm_scope_method_resolution_test.rs  jvm_scope_type_resolution_test.rs  mcp_daemon_test.rs  mcp_protocol_test.rs  mcp_server_test.rs  mcp_tools_test.rs  resolution_test.rs  security_test.rs  sync_test.rs
tests/analyze_cli_test/: boundaries.rs  capabilities.rs  centrality.rs  co_change.rs  communities.rs  complexity.rs  coverage.rs  cycles.rs  dominators.rs  export.rs  fixture.rs  generics.rs  impact.rs  query.rs  schema.rs  shared_contract.rs  slice.rs  stats.rs  support.rs  taint.rs  traits.rs  type_flow.rs  (+1 more)
testsprite_tests/: mcp-suite.json
(+510 files in other folders)
