[workspace]
members = ["analysis"]

[package]
name = "codegraph-rs"
version = "0.9.9"
edition = "2021"
description = "Supercharge Claude Code with semantic code intelligence. 94% fewer tool calls • 77% faster exploration • 100% local."
license = "MIT"
authors = ["Cole Leavitt <cole@unwrap.rs>"]
default-run = "codegraph"

[lib]
name = "codegraph"
path = "src/lib.rs"

[[bin]]
name = "codegraph"
path = "src/bin/codegraph.rs"

[dependencies]
anyhow = "1"
codegraph-analysis = { path = "analysis" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.40", features = ["bundled", "backup", "functions"] }
clap = { version = "4", features = ["derive"] }
notify = "8"
ignore = "0.4"
globset = "0.4"
walkdir = "2"
sha2 = "0.10"
regex = "1"
rayon = "1"
stacker = "0.1"
crossbeam-channel = "0.5"
indicatif = "0.18"
dirs = "6"
libc = "0.2"
toml_edit = "0.25"
jsonc-parser = { version = "0.32", features = ["cst"] }

# tree-sitter core + grammars (native — replaces web-tree-sitter + wasm files)
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-dart = "0.2"
tree-sitter-objc = "3"
tree-sitter-pascal = "0.10"
tree-sitter-scala = "0.26"
tree-sitter-lua = "0.5"
tree-sitter-luau = "1.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true

# Dedicated profiling profile — full debug symbols, same optimizations as release.
# Use: cargo build --profile profiling
# or:  cargo flamegraph --profile profiling
[profile.profiling]
inherits = "release"
debug = true
strip = "none"
