[workspace]
members = ["analysis"]

[package]
name = "codegraph-rs"
version = "1.3.1"
edition = "2021"
description = "Supercharge Claude Code with semantic code intelligence. 94% fewer tool calls • 77% faster exploration • 100% local."
license = "MIT"
authors = ["Cole Leavitt <cole@unwrap.rs>"]
default-run = "codegraph"

[lib]
name = "codegraph"
path = "src/lib.rs"

[[bin]]
name = "codegraph"
path = "src/bin/codegraph.rs"

[dependencies]
anyhow = "1"
codegraph-analysis = { path = "analysis" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.40", features = ["bundled", "backup", "functions"] }
clap = { version = "4", features = ["derive"] }
notify = "8"
ignore = "0.4"
globset = "0.4"
walkdir = "2"
sha2 = "0.10"
regex = "1"
linkscope = { git = "https://github.com/Miasin-Labs/linkscope", rev = "3c76713b531a5bf75d41e89ce132a33f42f31f5f", default-features = false }
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
# GPU resolution tier (optional): CUDA driver API + NVRTC via cudarc.
# dynamic-loading = no build-time CUDA dependency; libcuda is dlopen'd at
# runtime and absence degrades gracefully to the CPU path.
libloading = { version = "0.8", optional = true }
cudarc = { version = "0.16", features = ["std", "driver", "nvrtc", "dynamic-loading", "cuda-12090"], default-features = false, optional = true }

indicatif = "0.18"
dirs = "6"
libc = "0.2"
toml_edit = "0.25"
jsonc-parser = { version = "0.32", features = ["cst"] }

# tree-sitter core + grammars (native — replaces web-tree-sitter + wasm files)
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-arkts = "0.2.0"
tree-sitter-r = "1.3.0"
tree-sitter-solidity = "1.2.13"
tree-sitter-vyper = { git = "https://github.com/Olyno/tree-sitter-vyper", rev = "97d51f8b689b6a2dc62ab31b4d0d34797aec19a6" }
tree-sitter-move = { git = "https://github.com/tzakian/tree-sitter-move", rev = "640ee15e4a7b0d09a4bc95dcc71336c28d97999b" }
tree-sitter-cairo = { git = "https://github.com/starkware-libs/tree-sitter-cairo.git", rev = "b04ffb8c10a1a9faaea71a6757753fed4e1fcbfb" }
tree-sitter-sway = { git = "https://github.com/FuelLabs/tree-sitter-sway.git", rev = "9b7845ce06ecb38b040c3940970b4fd0adc331d1" }
tree-sitter-fe = { git = "https://github.com/fe-lang/tree-sitter-fe", rev = "4f8f4fcb6559d98c8e564c8da2542e0bc4736144" }
tree-sitter-nix = "0.3.0"
tree-sitter-cfml = "0.26.30"
tree-sitter-vb-dotnet = "0.1.0"
tree-sitter-erlang = "0.19.0"
tree-sitter-hcl = { git = "https://github.com/tree-sitter-grammars/tree-sitter-hcl", rev = "fad991865fee927dd1de5e172fb3f08ac674d914" }
tree-sitter-cobol = { package = "tree-sitter-COBOL", git = "https://github.com/yutaro-sakamoto/tree-sitter-cobol", rev = "274ff20cb860ee062d0880abda9f45fc90ef692e" }
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-dart = "0.2"
tree-sitter-objc = "3"
tree-sitter-pascal = "0.10"
tree-sitter-scala = "0.26"
tree-sitter-lua = "0.5"
tree-sitter-luau = "1.2"
# Salesforce Apex (also ships SOQL/SOSL grammars; only Apex is wired up)
tree-sitter-sfapex = "3"
tree-sitter-bash = "0.25"
cpp_demangle = "0.5.1"

[features]
default = []
# GPU-accelerated batch reference resolution (NVIDIA, CUDA >= 12). Safe to
# enable everywhere: probes for a usable device at runtime and falls back to
# the CPU path when none is found.
gpu = ["dep:cudarc", "dep:libloading", "codegraph-analysis/gpu"]

[dev-dependencies]
tempfile = "3"

# Some pinned legacy grammars still declare tree-sitter ~0.20 even though their
# bindings only expose `Language`. Re-export the workspace's 0.26 API for that
# semver slot so Cargo keeps a single native tree-sitter runtime.
[patch.crates-io]
tree-sitter = { path = "vendor/tree-sitter-compat-0-20" }

[profile.release]
lto = "thin"
strip = true

# Dedicated profiling profile — full debug symbols, same optimizations as release.
# Use: cargo build --profile profiling
# or:  cargo flamegraph --profile profiling
[profile.profiling]
inherits = "release"
debug = true
strip = "none"
