[package]
name = "codegraph-analysis"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Graph-based context engine for semantic code analysis"

[lib]
name = "codegraph_analysis"

[dependencies]
petgraph = { version = "0.8", features = ["serde-1"] }
regex = "1"
# Pinned exact: deterministic parses across builds (AST shape comes from the
# grammar crates below, which stay pinned to the same versions as upstream
# jfc-graph). NOTE: upstream jfc-graph pins `=0.25.10`, but `tree-sitter`
# declares `links = "tree-sitter"`, so one workspace can only contain ONE
# version of it — and the codegraph-rs root package requires `^0.26`. The
# runtime API surface this crate uses (Parser/Tree/Node/Language) is
# source-compatible across 0.25 -> 0.26, and the grammar crates bind through
# `tree-sitter-language`, so they are runtime-version-agnostic.
tree-sitter = "=0.26.9"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-kotlin-sg = "0.4"
tree-sitter-swift = "0.7"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.150", features = ["preserve_order", "raw_value"] }
# default-features off: drops `heapless-cas` -> heapless 0.7 -> the
# archived atomic-polyfill (RUSTSEC-2023-0089); we only need std Vec I/O.
postcard = { version = "1", default-features = false, features = ["use-std"] }
ignore = "0.4"
thiserror = "2.0.18"
tracing = "0.1.44"
# Phase 1 — parallelism + dense bitsets for direction-optimised BFS.
ws-deque = { path = "../../../ws-deque" }
roaring = "0.10"
dashmap = "6"
# Recursion guard: grows the stack on demand so recursive AST/IR/graph walkers
# (complexity, cfg, dataflow, ir, adapters, SCC/clique) can't overflow a worker
# thread's fixed stack on pathologically deep inputs. See `ensure_sufficient_stack`.
stacker = "0.1"
# Deterministic, cross-machine-stable digest for `Fingerprint`. SipHash
# (DefaultHasher) is process-specific and varies across stdlib versions, so
# indices built on CI couldn't be shared with developer machines. BLAKE3 is
# fixed, fast, and the same on every host.
blake3 = "1.8"
# GPU graph analytics (optional): CUDA driver + NVRTC via cudarc, runtime-loaded.
libloading = { version = "0.8", optional = true }
cudarc = { version = "0.16", features = ["std", "driver", "nvrtc", "dynamic-loading", "cuda-12090"], default-features = false, optional = true }

[features]
default = []
# GPU-accelerated graph analytics (PageRank, ...). Runtime-probed; falls back
# to the CPU path when no CUDA device is present.
gpu = ["dep:cudarc", "dep:libloading"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_bench"
harness = false

# Inlined from the jfc workspace's [workspace.lints.*] — the code was written
# against these allow/deny levels (e.g. custom cfgs, intentional type
# complexity), so they move with the crate instead of `[lints] workspace = true`.
[lints.rust]
unexpected_cfgs = { level = "allow" }

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
